syntax = "proto3";

package user;

option go_package = "/user";  // Tambahkan ini!

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}